--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,3 +7,19 @@ body {
   "Helvetica Neue", sans-serif;
   position: relative;
 }
+mat-card {
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  max-width: 400px;
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  button {
+    height: 30px;
+   // background-color: rgba(150, 245, 245, 0.49);
+    border: none;
+    border-radius: 4px;
+    color: #eeeeee;
+  }
+}
