--- a/frontend/src/app/task/task-list/task-list.component.html
+++ b/frontend/src/app/task/task-list/task-list.component.html
@@ -1,17 +1,28 @@
 <div class="container">
-  <h2>To do</h2>
 
-  <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="tasksList$ | async"
-       [cdkDropListConnectedTo]="doneList" class="list" (cdkDropListDropped)="drop($event)">
-    <div class="list-item" *ngFor="let item of tasksList$ | async" cdkDrag>{{item.description}}</div>
-  </div>
-</div>
+  <form [formGroup]="taskForm"
+        (ngSubmit)="addTask()"
+        >
 
-<div class="container">
-  <h2>Done</h2>
+    <mat-form-field color="primary"
+                    appearance="outline">
+      <mat-label [style.color]="textColor?.titleTextColor">To do</mat-label>
+      <input matInput
+             type="text"
+             formControlName="description"
+             [style.color]="textColor?.titleTextColor">
+    </mat-form-field>
+  </form>
+  <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="tasks"
+     class="list" (cdkDropListDropped)="drop($event)">
+    <div class="list-item" [style.color]="textColor?.titleTextColor" *ngFor="let item of tasks" cdkDrag>{{item.description}}
+      <mat-icon class="close-button"
+                aria-hidden="false"
+                aria-label="close"
+                [style.color]="textColor?.titleTextColor"
+                (click)="deleteTask(item)"
+      >close</mat-icon>
+    </div>
 
-  <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="tasksList$ | async"
-       [cdkDropListConnectedTo]="todoList" class="list" (cdkDropListDropped)="drop($event)">
-    <div class="list-item" *ngFor="let item of tasksList$ | async" cdkDrag>{{item.description}}</div>
   </div>
 </div>
