--- a/frontend/src/app/task/task-list/task-list.component.scss
+++ b/frontend/src/app/task/task-list/task-list.component.scss
@@ -4,12 +4,16 @@
   margin: 0 20px;
   display: inline-block;
   vertical-align: top;
+  max-height: calc(100vh - 366px);
+  overflow: auto;
+  margin-bottom: 15px
+;
 }
 
 .list {
   border: solid 1px #ccc;
   min-height: 60px;
-  background: white;
+  background: transparent;
   border-radius: 4px;
   display: block;
   overflow: hidden;
@@ -20,7 +24,7 @@
   border-bottom: solid 1px #ccc;
   box-sizing: border-box;
   cursor: move;
-  background: white;
+  background: transparent;
   color: black;
   font-size: 14px;
 }
@@ -51,3 +55,12 @@
   opacity: 0;
 }
 
+.close-button {
+  display: block;
+  float: right;
+  color: black;
+  cursor: pointer;
+}
+.container {
+
+}
