--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,8 +1,6 @@
 <mat-card>
   <form [formGroup]="loginForm"
-        (ngSubmit)="login()"
-        >
-
+        (ngSubmit)="login()">
     <mat-form-field color="primary"
                     appearance="outline">
       <mat-label>Email</mat-label>
@@ -17,9 +15,6 @@
              type="password"
              formControlName="password">
     </mat-form-field>
-
-
-
     <button [style.backgroundColor]="(buttonColor$ | async)?.mainColors?.Vibrant"
             [class.disabled]="this.loginForm.invalid"
             type="submit">
