--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,13 @@
 <router-outlet></router-outlet>
+<!--<google-chart [title]="'Title'" [type]="'ComboChart'" [data]="myData"
+              [options]="myOptions">
+</google-chart>
+<google-chart #chart
+              [title]="title"
+              [type]="type"
+              [data]="data"
+              [columns]="columnNames"
+              [options]="options"
+              [width]="width"
+              [height]="height">
+</google-chart>-->
