--- a/frontend/src/app/push-notification/push-notification.component.html
+++ b/frontend/src/app/push-notification/push-notification.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <h1> {{title}} </h1>
-  <button (click)="notify()">Show Notiication</button>
+  <button (click)="notify()">Show Notification</button>
 </div>
