--- a/frontend/src/app/task/task-list/task-list.component.scss
+++ b/frontend/src/app/task/task-list/task-list.component.scss
@@ -6,31 +6,15 @@
   vertical-align: top;
   max-height: calc(100vh - 366px);
   overflow: auto;
-  margin-bottom: 15px
-;
+  margin-bottom: 15px;
 }
 
 .list {
-  border: solid 1px #ccc;
   min-height: 60px;
   background: transparent;
   border-radius: 4px;
   display: block;
   overflow: hidden;
-}
-
-.list-item {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  box-sizing: border-box;
-  cursor: move;
-  background: transparent;
-  color: black;
-  font-size: 14px;
-}
-
-.list-item:last-child {
-  border: none;
 }
 
 /* Highlight the list item that is being dragged. */
